package: updated dependencies

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "repository": "https://github.io/renproject/darknode-sol",
   "scripts": {
     "generate": "truffle compile && typechain --target truffle './build/**/*.json'",
-    "coverage": "yarn run generate && solidity-coverage",
-    "test": "yarn run generate && truffle test --show-events",
+    "coverage": "yarn run generate && truffle run coverage",
+    "test": "yarn run generate && truffle test",
     "bindings:ts": "truffle compile && typechain --target web3-v1 \"./build/chaosnet/*.json\"",
     "bindings:go": "solc darknode-sol=`pwd`/node_modules/darknode-sol @openzeppelin/upgrades=`pwd`/node_modules/@openzeppelin/upgrades @openzeppelin/contracts=`pwd`/node_modules/@openzeppelin/contracts --combined-json bin,abi,userdoc,devdoc,metadata $(find contracts -type f -name '*.sol') | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
@@ -17,38 +17,38 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
-    "@openzeppelin/upgrades": "^2.7.1"
+    "@openzeppelin/upgrades": "^2.7.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.9",
+    "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/ethereumjs-abi": "^0.6.3",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^13.7.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.1",
     "bignumber.js": "^9.0.0",
     "bn.js": "^5.1.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "github:noiach/chai-bignumber.git#fd75e47b2980c3a151d2a05b070293b18a9bddce",
+    "chai-bignumber": "github:ren-forks/chai-bignumber.git#afa6f46dcbef0b7e622dc27b9b3354fc67afafbc",
     "coveralls": "^3.0.9",
     "dotenv": "^8.2.0",
     "eth-gas-reporter": "^0.2.15",
     "ethereumjs-abi": "^0.6.8",
     "ganache-cli": "^6.9.1",
     "hash.js": "^1.1.7",
-    "patch-package": "^6.2.0",
+    "patch-package": "^6.2.1",
     "solc": "^0.5.16",
-    "solidity-coverage": "^0.6.7",
-    "truffle": "^5.1.13",
+    "solidity-coverage": "^0.7.2",
+    "truffle": "^5.1.17",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "0.3.9",
     "truffle-typings": "^1.0.8",
     "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.0",
     "typechain": "^1.0.5",
     "typechain-target-truffle": "^1.0.2",
     "typechain-target-web3-v1": "^1.0.4",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "web3": "^2.0.0-alpha",
     "web3-utils": "^2.0.0-alpha"
   },
