contracts,migrations: updated gateway mint authority permissions, updated migrations

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "coverage": "yarn run generate && truffle run coverage",
     "test": "yarn run generate && truffle test",
     "bindings:ts": "truffle compile && typechain --target web3-v1 \"./build/chaosnet/*.json\"",
-    "bindings:go": "solc darknode-sol=`pwd`/node_modules/darknode-sol @openzeppelin/upgrades=`pwd`/node_modules/@openzeppelin/upgrades @openzeppelin/contracts=`pwd`/node_modules/@openzeppelin/contracts --combined-json bin,abi,userdoc,devdoc,metadata $(find contracts -type f -name '*.sol') | abigen -pkg bindings --out bindings.go --abi -",
+    "bindings:go": "solc --optimize darknode-sol=`pwd`/node_modules/darknode-sol @openzeppelin/upgrades=`pwd`/node_modules/@openzeppelin/upgrades @openzeppelin/contracts=`pwd`/node_modules/@openzeppelin/contracts --combined-json bin,abi,userdoc,devdoc,metadata $(find contracts -type f -name '*.sol') | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "patch-package",
-    "deploy": "truffle migrate --network $NETWORK",
-    "deploy-skipDryRun": "yarn deploy --skipDryRun",
+    "deploy": "truffle migrate --network $NETWORK 2>&1 | tee $NETWORK-output.log",
+    "deploy-skipDryRun": "truffle migrate --network $NETWORK --skipDryRun 2>&1 | tee $NETWORK-output.log",
     "clean-build": "echo  \"Have all contracts been verified on Etherscan? Continuing in 10 seconds...\" && sleep 10 && grep -R -l 'networks\": {}' build --exclude-dir=development | xargs rm; node build/clean.js",
     "verify": "truffle run verify --network $NETWORK"
   },
@@ -40,7 +40,7 @@
     "patch-package": "^6.2.1",
     "solc": "^0.5.16",
     "solidity-coverage": "^0.7.2",
-    "truffle": "^5.1.17",
+    "truffle": "^5.1.18",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "0.3.9",
     "truffle-typings": "^1.0.8",
