--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "ren-sol",
-  "version": "1.0.0",
-  "description": "Ethereum smart contracts for bonding REN and claiming rewards",
-  "main": "index.js",
-  "repository": "https://github.com/renproject/ren-sol",
-  "author": "Ren Project",
-  "license": "MIT",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.10",
-    "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^3.3.0"
-  },
-  "prettier": {
-    "tabWidth": 4,
-    "trailingComma": "all"
-  }
+    "name": "ren-sol",
+    "version": "1.0.0",
+    "description": "Ethereum smart contracts for bonding REN and claiming rewards",
+    "main": "index.js",
+    "repository": "https://github.com/renproject/ren-sol",
+    "author": "Ren Project",
+    "license": "MIT",
+    "scripts": {
+        "build": "hardhat build",
+        "test": "hardhat test",
+        "coverage": "hardhat coverage"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.0",
+        "@nomiclabs/hardhat-waffle": "^2.0.0",
+        "@types/chai": "^4.2.14",
+        "@types/chai-as-promised": "^7.1.3",
+        "@types/mocha": "^8.0.4",
+        "@types/node": "^14.14.10",
+        "bignumber.js": "^9.0.1",
+        "chai": "^4.2.0",
+        "chai-as-promised": "^7.1.1",
+        "ethereum-waffle": "^3.0.0",
+        "ethers": "^5.0.0",
+        "hardhat": "^2.0.4",
+        "solidity-coverage": "^0.7.12",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.1.2"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^3.3.0",
+        "@typechain/ethers-v5": "^4.0.0",
+        "hardhat-typechain": "^0.3.3",
+        "ts-generator": "^0.1.1",
+        "typechain": "^4.0.0"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "trailingComma": "all"
+    }
 }
