--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
         "dotenv": "^8.2.0",
         "eth-gas-reporter": "^0.2.15",
         "ethereumjs-abi": "^0.6.8",
-        "ganache-cli": "^6.9.1",
+        "ganache-cli": "^6.12.2",
         "hash.js": "^1.1.7",
+        "immutable": "^4.0.0-rc.12",
+        "moment": "^2.29.1",
         "npmignore": "^0.2.0",
         "patch-package": "^6.2.1",
-        "solc": "^0.5.16",
+        "solc": "^0.5.17",
         "solidity-coverage": "^0.7.2",
-        "truffle": "^5.1.18",
+        "truffle": "^5.2.4",
         "truffle-hdwallet-provider": "^1.0.17",
         "truffle-plugin-verify": "0.3.9",
         "truffle-typings": "^1.0.8",
@@ -55,10 +57,14 @@
         "typechain-target-web3-v1": "^1.0.4",
         "typescript": "^3.8.3",
         "web3": "^2.0.0-alpha",
+        "web3-core": "^1.3.4",
         "web3-utils": "^2.0.0-alpha"
     },
     "resolutions": {
-        "solc": "0.5.16",
+        "solc": "0.5.17",
         "sol-merger": "1.1.1"
+    },
+    "prettier": {
+        "tabWidth": 4
     }
 }
