--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "repository": "https://github.io/renproject/darknode-sol",
     "public": true,
     "scripts": {
-        "generate": "truffle compile && typechain --target truffle './build/development/*.json'",
+        "generate": "truffle compile && typechain --target truffle-v5 './build/development/*.json'",
         "coverage": "yarn run generate && truffle run coverage",
         "build": "yarn run generate && truffle build",
         "test": "yarn run generate && truffle test",
@@ -20,47 +20,47 @@
         "prepare-release": "npmignore"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "^2.5.0",
-        "@openzeppelin/contracts-ethereum-package": "^2.4.0",
-        "@openzeppelin/upgrades": "^2.7.2"
+        "@openzeppelin/contracts": "^2.5.1",
+        "@openzeppelin/contracts-ethereum-package": "^2.5.0",
+        "@openzeppelin/upgrades": "^2.8.0"
     },
     "devDependencies": {
-        "@types/chai": "^4.2.11",
-        "@types/chai-as-promised": "^7.1.2",
+        "@typechain/truffle-v5": "^5.0.0",
+        "@typechain/web3-v1": "^3.0.0",
+        "@types/chai": "^4.2.21",
+        "@types/chai-as-promised": "^7.1.4",
         "@types/ethereumjs-abi": "^0.6.3",
-        "@types/mocha": "^7.0.2",
-        "@types/node": "^13.9.1",
-        "@types/seedrandom": "^3.0.0",
-        "bignumber.js": "^9.0.0",
-        "bn.js": "^5.1.1",
-        "chai": "^4.2.0",
+        "@types/mocha": "^9.0.0",
+        "@types/node": "^16.7.1",
+        "@types/seedrandom": "^3.0.1",
+        "bignumber.js": "^9.0.1",
+        "bn.js": "^5.2.0",
+        "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "chai-bignumber": "github:ren-forks/chai-bignumber.git#afa6f46dcbef0b7e622dc27b9b3354fc67afafbc",
-        "coveralls": "^3.0.9",
-        "dotenv": "^8.2.0",
-        "eth-gas-reporter": "^0.2.15",
+        "coveralls": "^3.1.1",
+        "dotenv": "^10.0.0",
+        "eth-gas-reporter": "^0.2.22",
         "ethereumjs-abi": "^0.6.8",
         "ganache-cli": "^6.12.2",
         "hash.js": "^1.1.7",
-        "immutable": "^4.0.0-rc.12",
+        "immutable": "^4.0.0-rc.14",
         "moment": "^2.29.1",
         "npmignore": "^0.2.0",
-        "patch-package": "^6.2.1",
+        "patch-package": "^6.4.7",
         "seedrandom": "^3.0.5",
         "solc": "^0.5.17",
-        "solidity-coverage": "^0.7.2",
-        "truffle": "^5.2.4",
+        "solidity-coverage": "^0.7.16",
+        "truffle": "^5.4.7",
         "truffle-hdwallet-provider": "^1.0.17",
-        "truffle-plugin-verify": "0.3.9",
+        "truffle-plugin-verify": "0.5.11",
         "truffle-typings": "^1.0.8",
-        "ts-node": "^8.6.2",
-        "tslint": "^6.1.0",
-        "typechain": "^1.0.5",
-        "typechain-target-truffle": "^1.0.2",
-        "typechain-target-web3-v1": "^1.0.4",
-        "typescript": "^3.8.3",
+        "ts-node": "^10.2.1",
+        "tslint": "^6.1.3",
+        "typechain": "^5.1.2",
+        "typescript": "^4.3.5",
         "web3": "^2.0.0-alpha",
-        "web3-core": "^1.3.4",
+        "web3-core": "^1.5.2",
         "web3-utils": "^2.0.0-alpha"
     },
     "resolutions": {
